# grasped_flag_setting_action

grasped_action/: CMakeLists.txt  package.xml
grasped_action/src/: grasped_action.cpp
grasped_action_msgs/: CMakeLists.txt  package.xml
grasped_action_msgs/action/: Grasped.action
rtt_grasped_action_msgs/: CMakeLists.txt  package.xml
